--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.13.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "formidable": "^3.5.4",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
