--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "@react-google-maps/api": "^2.20.7",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "formidable": "^3.5.4",
