--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
     "@react-google-maps/api": "^2.20.7",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
+    "clsx": "^2.1.1",
     "formidable": "^3.5.4",
+    "lucide-react": "^0.552.0",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "recharts": "^3.3.0",
     "swiper": "^12.0.2",
     "uuid": "^11.1.0"
   },
