--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.3.0",
+    "sweetalert2": "^11.26.17",
     "swiper": "^12.0.2",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
