--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "clsx": "^2.1.1",
     "formidable": "^3.5.4",
     "lucide-react": "^0.552.0",
-    "next": "15.4.5",
+    "next": "^16.1.6",
     "next-auth": "^4.24.11",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
     "recharts": "^3.3.0",
     "sweetalert2": "^11.26.17",
