--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "^6.16.1",
     "@react-google-maps/api": "^2.20.7",
+    "@vercel/blob": "^2.1.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
