--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "formidable": "^3.5.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.552.0",
     "next": "^16.1.6",
     "next-auth": "^4.24.11",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "recharts": "^3.3.0",
     "sweetalert2": "^11.26.17",
     "swiper": "^12.0.2",
@@ -31,6 +33,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/bcrypt": "^6.0.0",
+    "@types/leaflet": "^1.9.21",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
