--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.16.1",
     "@react-google-maps/api": "^2.20.7",
     "@vercel/blob": "^2.1.0",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
